# uavgp_catkin_ws_src

./: readme.md
apoc_pkg/: CMakeLists.txt  package.xml
apoc_pkg/config/: params.xml
apoc_pkg/doc/: readme.md  todolist.md
apoc_pkg/launch/: apoc_test.launch
apoc_pkg/lib/: apoc.cpp  arm.cpp  callback.cpp  connect.cpp  fly_ab.cpp  fly_re.cpp  land.cpp  mode.cpp  pid_flyab.cpp  pidctrl.cpp  reach.cpp  takeoff.cpp
apoc_pkg/log/: 2025-09-21-17-24-23.bag  trace_x_log_20250918_053947.txt  trace_x_log_20250918_054430.txt  trace_x_log_20250918_055025.txt  trace_x_log_20250918_055137.txt  trace_x_log_20250918_061000.txt  trace_x_log_20250918_062048.txt  trace_x_log_20250918_063101.txt  trace_x_log_20250918_063247.txt  trace_x_log_20250919_043227.txt  trace_x_log_20250919_043344.txt  trace_x_log_20250919_043446.txt  trace_x_log_20251001_204011.txt  zlog.txt  zlog_20250913_051857.txt  zlog_20250913_054016.txt  zlog_20250913_054308.txt  zlog_20250913_055826.txt  zlog_20250913_060408.txt  zlog_20250913_060807.txt  zlog_20250913_061227.txt  zlog_20250913_063851.txt  zlog_pose_only_20250913_065516.txt  zlog_pose_only_20250913_073009.txt  zlog_pose_only_20250913_073044.txt  zlog_pose_only_20250913_073251.txt  zlog_pose_only_20250913_073919.txt  zlog_pose_only_20250913_074412.txt  zlog_pose_only_20250913_074629.txt  zlog_pose_only_20250913_074731.txt
apoc_pkg/msg/: detection_data.msg  trace_data.msg
apoc_pkg/node/: main_node.cpp  test_node.cpp
apoc_pkg/script/: faketrace.py  tracedebug.py  tracexdebug.py  x_data_log.py  xtracelog.py  zlogdebug.py
apoc_pkg/src/: loop.cpp  mission_planner.cpp  test_node.cpp
apoc_pkg/tools/: 3dsim.sh  sim.sh
avoid_pkg/src/: avoid.cpp
avoid_planner_pkg/: CMakeLists.txt  package.xml
avoid_planner_pkg/action/: ApocAvoid.action  apoc_avoid.action
avoid_planner_pkg/config/: params.xml  pcp_test_params.yaml  pointcloud_processor_params.xml  pointcloud_processor_params.yaml
avoid_planner_pkg/doc/: README.md
avoid_planner_pkg/include/: avoid_planner.h  local_planner.h  pointcloud_manager.h
avoid_planner_pkg/include/avoid_planner_pkg/: avoid_planner.h  cost_calculator.h  local_planner.h  mavros_interface.h  planner_bridge.h  pointcloud_processor.h  potential_field.h  star_planner.h  utils.h
avoid_planner_pkg/launch/: pcp_test.launch
avoid_planner_pkg/lib/: anglebinIndex.cpp  avoid_planner.cpp  calculateAtt.cpp  calculateRep.cpp  calculateTotal.cpp  filterPC.cpp  generatPFdismap.cpp  generateForceDir.cpp  generatePFdismap.cpp  generatePFpotmap.cpp  gengeratPFdismap.cpp  gengeratPFpotmap.cpp  goalCB.cpp  local_planner.cpp  pointcloudCB.cpp  pointcloud_manager.cpp  tfBodyFrame.cpp  tfBodyframe.cpp  updatePFpoint.cpp  utils.cpp
avoid_planner_pkg/lib/planner_bridge/: planner_bridge.cpp  pointcloudCB.cpp
avoid_planner_pkg/lib/pointcloud_processor/: angle_tobin_index.cpp  filter_pointcloud.cpp  get_histogram.cpp  is_updated.cpp  load_params.cpp  pointcloud_processor.cpp  pointcloude_callback.cpp  transform_to_bodyframe.cpp
avoid_planner_pkg/lib/potential_field/: calculate_attractive_force.cpp  calculate_repulsive_force.cpp  calculate_total_force.cpp  generate_attract_fan.cpp  generate_potentialfield.cpp  generate_total_force.cpp  get_polar_histogram.cpp  load_params.cpp  potential_field.cpp  set.cpp  update_polar_goal.cpp
avoid_planner_pkg/msg/: PolarFieldMsg.msg  PolarHistogramMsg.msg
avoid_planner_pkg/save/pointcloud_processor/: angle_tobin_index.cpp  generate_polarhistogram.cpp  get_angle_bin_index.cpp  pointcloude_callback.cpp  update_histogram_from_point.cpp
avoid_planner_pkg/script/: fake_action.py  pcp_debug.py  test_dis_debug.py  test_pot_debug.py
avoid_planner_pkg/src/include/avoidance/: common.h
avoid_planner_pkg/src/lib/: cost_calculator.cpp  local_planner.cpp  mavros_interface.cpp  pointcloud_processor.cpp  pointcloude_processor.cpp  star_planner.cpp  utils.cpp
avoid_planner_pkg/src/node/: main_node.cpp
avoid_planner_pkg/src/test/: pc_test.cpp  pcp_test.cpp
avoid_planner_pkg/test/: pcp_test.cpp  pf_test_nose.cpp  test.cpp
ego_avoidance_pkg/: readme.md
local_planner/launch/: local_planner_mid360.launch
localplanner_pkg/: CMakeLists.txt  package.xml
mid360_avoidance/doc/: README.md  README1.md  README2.MD
mission_master_pkg/: ARCHITECTURE.md  CMakeLists.txt  EIGEN_MIGRATION_SUMMARY.md  QUICK_START.md  README.md  README_TESTING.md  package.xml
mission_master_pkg/action/: Grip.action  Pick.action  Trace.action  avoid.action  pick.action  trace.action
mission_master_pkg/config/: param.yaml  param_avoid.yaml  param_pick.yaml  params.yaml
mission_master_pkg/doc/: readme.md  todo.md
mission_master_pkg/include/mission_master_pkg/: mission_master.h  mission_master_node.h  pidctrl.h
mission_master_pkg/launch/: master.launch  mm_gazebo_singlewpt.launch  test.launch  test_avoid.launch  test_grip.launch  test_grip.launch.bak  test_pickup.launch
mission_master_pkg/lib/: armSet.cpp  avoidAct.cpp  avoidExecute.cpp  avoidKit.cpp  avoid_kit.cpp  callback.cpp  client.cpp  executor.cpp  landExecute.cpp  land_kit.cpp  loadParams.cpp  loadparam.cpp  loadwaypoints.cpp  missionExecute.cpp  mission_master.cpp  mission_master.save  mission_master_node.cpp  pickAct.cpp  pickupCheck.cpp  pickupExecute.cpp  pickupStart.cpp  pickup_kit.cpp  pidctrl.cpp  reachCheck.cpp  setPoint.cpp  takeoffCheck.cpp  takeoffExecute.cpp  takeoff_kit.cpp  traceAct.cpp  traceExecute.cpp  trace_kit.cpp  utils.cpp  waitingTakeoff.cpp
mission_master_pkg/msg/: CamTrack.msg
mission_master_pkg/node/: grip_test_node.cpp  uavgp25_mission_node.cpp
mission_master_pkg/save/: executor.cpp  flyto.cpp
mission_master_pkg/script/: fake_cam_tracker.py
mission_master_pkg/src/: mission_master_node.h
mission_master_pkg/test/: test_mission_master_node.cpp
save/: pointcloud_processor.h  potential_field.h
save/pointcloud_processor/: filter_pointcloud.cpp  reset_updated_flag.cpp
save/potential_field/: calculate_repulsive_force.cpp  calculate_total_force.cpp
vin_pkg/src/: vin.cpp
vins_to_mavros/: CMakeLists.txt  package.xml
(+50 files in other folders)
